// ERD Sistem E-Voting Ketua HMTI — Universitas Nusa Putra
// Tempel file ini di https://dbdiagram.io (Import > DBML, atau paste langsung ke editor)
// Sumber: backend/app/models/*.py (SQLAlchemy) — sinkron dengan migrasi alembic terkini.

Enum access_mode {
  mandiri
  admin_assisted
}

Enum session_status {
  draft
  registration_open
  voting_open
  closed
}

Enum verification_result {
  valid
  invalid
  locked
}

Enum assisted_session_result {
  success
  failed
  cancelled
}

Table users {
  id integer [pk, increment]
  nim varchar(20) [unique, not null, note: 'Nomor Induk Mahasiswa']
  nama varchar(150) [not null]
  email varchar(150) [unique]
  password_hash varchar(255) [note: 'Null jika admin_assisted & belum pernah set password']
  kelas varchar(50)
  mode_akses access_mode [not null, default: 'mandiri']
  face_enrolled boolean [not null, default: false]
  has_voted boolean [not null, default: false]
  is_locked boolean [not null, default: false]
  is_dpt_member boolean [not null, default: true]
  face_note text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Data mahasiswa / pemilih (Daftar Pemilih Tetap)'
}

Table admin_accounts {
  id integer [pk, increment]
  username varchar(80) [unique, not null]
  password_hash varchar(255) [not null]
  role varchar(50) [not null, default: 'admin']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Akun panitia/admin'
}

Table kiosk_devices {
  id integer [pk, increment]
  name varchar(150) [not null]
  device_id varchar(100) [unique, not null]
  ip_address varchar(45)
  is_active boolean [not null, default: true]
  location varchar(150)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Perangkat kiosk terdaftar untuk mode admin-assisted'
}

Table election_sessions {
  id integer [pk, increment]
  name varchar(150) [not null]
  status session_status [not null, default: 'draft']
  registration_open_at timestamp
  registration_close_at timestamp
  voting_open_at timestamp
  voting_close_at timestamp
  description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Sesi pemilihan (mis. Pemilihan Ketua HMTI 2026)'
}

Table positions {
  id integer [pk, increment]
  session_id integer [not null]
  name varchar(150) [not null]
  is_required boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Jabatan yang dipilih dalam satu sesi (mis. Ketua, Wakil Ketua)'
}

Table candidates {
  id integer [pk, increment]
  position_id integer [not null]
  name varchar(150) [not null]
  number integer [not null]
  vision text
  photo_path varchar(255) [note: 'Opsional: path file (belum dipakai)']
  photo_base64 text [note: 'MEDIUMTEXT di MySQL — foto kandidat sebagai data URL base64']
  color varchar(20)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (position_id, number) [unique, name: 'uq_candidates_position_number']
  }

  Note: 'Kandidat per jabatan'
}

Table votes {
  id integer [pk, increment]
  session_id integer [not null]
  position_id integer [not null]
  candidate_id integer [not null]
  vote_token varchar(64) [unique, not null, note: 'Token anonim — suara tidak terhubung langsung ke identitas pemilih']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Suara tersimpan (anonim, dipisah dari identitas pemilih)'
}

Table voter_statuses {
  id integer [pk, increment]
  user_id integer [not null]
  session_id integer [not null]
  has_voted boolean [not null, default: false]
  voted_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, session_id) [unique, name: 'uq_voter_status_user_session']
  }

  Note: 'Status sudah/belum memilih per sesi — terpisah dari data suara (votes) demi kerahasiaan pilihan'
}

Table face_profiles {
  id integer [pk, increment]
  user_id integer [unique, not null]
  embedding blob [not null, note: 'Matriks embedding 5 pose (format .npy)']
  embedding_version varchar(50) [not null, default: 'insightface-v1']
  image_path varchar(255)
  photo_base64 text [note: 'MEDIUMTEXT di MySQL — foto pose tengah hasil registrasi']
  quality_score integer
  notes text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Profil wajah (1:1 dengan users) hasil registrasi 5 pose'
}

Table face_verification_logs {
  id integer [pk, increment]
  user_id integer [not null]
  result verification_result [not null]
  similarity_score float
  liveness_score float
  reason varchar(255)
  device_info text
  snapshot_base64 text [note: 'MEDIUMTEXT di MySQL — cuplikan wajah saat verifikasi/memilih']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Log setiap percobaan verifikasi wajah & liveness'
}

Table assisted_sessions {
  id integer [pk, increment]
  admin_id integer [not null]
  kiosk_device_id integer [not null]
  user_id integer [not null]
  started_at timestamp
  ended_at timestamp
  result assisted_session_result
  notes text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Riwayat sesi bantuan panitia (mode admin_assisted) di kiosk'
}

Table audit_logs {
  id integer [pk, increment]
  actor_type varchar(30) [not null, note: 'mis. admin, system']
  actor_id integer
  action varchar(100) [not null]
  target varchar(150)
  details text
  admin_id integer
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Jejak audit aksi admin (buka/tutup sesi, edit kandidat, dll.)'
}

// ---------------------------------------------------------------- Relasi ---
Ref: face_profiles.user_id > users.id [delete: cascade]
Ref: face_verification_logs.user_id > users.id [delete: cascade]
Ref: voter_statuses.user_id > users.id [delete: cascade]
Ref: voter_statuses.session_id > election_sessions.id [delete: cascade]
Ref: assisted_sessions.user_id > users.id [delete: cascade]
Ref: assisted_sessions.admin_id > admin_accounts.id [delete: cascade]
Ref: assisted_sessions.kiosk_device_id > kiosk_devices.id [delete: cascade]
Ref: positions.session_id > election_sessions.id [delete: cascade]
Ref: candidates.position_id > positions.id [delete: cascade]
Ref: votes.session_id > election_sessions.id [delete: cascade]
Ref: votes.position_id > positions.id [delete: cascade]
Ref: votes.candidate_id > candidates.id [delete: cascade]
Ref: audit_logs.admin_id > admin_accounts.id [delete: set null]
